Ejercicios DOM sesion 19

--- a/session19/index.html
+++ b/session19/index.html
@@ -9,14 +9,31 @@
     <title>Lista de Mentores desde Base de Datos</title>
 </head>
 <body>
+  
   <div class="container">
     <div class="form-group">
-      <label for="nombre">Nombre</label>
-      <input name='name' type="text" class="form-control" aria-describedby="nombre">
+      <label for="mentor">Mentor</label>
+      <input name='mentor' type="text" class="form-control" aria-describedby="nombre">
     </div>
     <div class="form-group">
-      <label for="apellido">Apellido</label>
-      <input name='lastName' type="text" class="form-control">
+      <label for="HTML">HTML</label>
+      <input name='html' type="text" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="CSS">CSS</label>
+        <input name='css' type="text" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="JS">JS</label>
+        <input name='js' type="text" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="REACT">REACT</label>
+        <input name='react' type="text" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="promedio">PROMEDIO</label>
+        <input name='average' type="text" class="form-control">
     </div>
     <button type="button" id="saveMentor" class="btn btn-primary">Guardar</button>
   </div>
