--- a/session20/index.html
+++ b/session20/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <div id="figura" class="cuadrado">
+                <div id="figura">
 
                 </div>
             </div>
